--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -484,6 +484,20 @@ To use the function with different file name patterns, adjust `identifier.patter
 The following sections may help improve the result of the segmentation,
 to catch severe issues early on.
 
+### Check that all images are there
+
+The arguments function will run several tests (using `arguments_check` internally)
+before returning the list of images for cell-ID.
+
+Warnings (or errors if desired) will be generated if the checks fail.
+
+```{r}
+# Get images and their metadata.
+image_list <- rcell2.cellid::arguments(paste0(data.dir, "/renamed"), 
+                                       check_fail = TRUE,
+                                       file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)_time(\\d+).tif$")
+```
+
 ### Check XY stage coordinates
 
 It may be a good idea to double check that the physical coordinates of your images
