--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -1074,6 +1074,10 @@ open another virtual hyperstack for the output images, and browse them in-sync.
 Sometimes we want to test out many parameter combinations 
 before running Cell-ID in the full dataset.
 
+> If you use Cell-ID often, your cells' morphologies do not change dramatically,
+> and you are using the same microscope as the last time, you may be better off 
+> reusing those parameters and skipping this section.
+
 This functionality requires the `magick` R package,
 and ImageMagick on your system (which can be obtained 
 [here](https://imagemagick.org/script/download.php)). 
@@ -1353,6 +1357,53 @@ output files with segmentation masks or identified cell-boundary pixel coordinat
 > `n_cores` can be set to the number of CPU cores you want to use to parallelize
 > the segmentation (relying on `foreach`). It defaults to use all but one of the
 > available cores.
+
+
+#### Review segmentation in ImageJ
+
+This section helps you open your images with FIJI-ImageJ to review the resulting segmentation.
+
+A simple Macro can be run in ImageJ to load virtual hyperstacks of any experiment.
+
+> Note: this macro uses a "file" pattern that only matches output images (i.e. "tif.out.tif")
+> in a tipically-named set of images.
+
+Steps:
+
+1. Run the following code, copy its output to the clipboard.
+2. Open ImageJ/FIJI, and open a new "Macro" window by clicking on "Plugins -> New -> Macro".
+3. Paste the macro into the macro editor, and click on "Run". A new hyperstack window will open.
+4. Browse the images using the sliders.
+
+```{r}
+# Make an ImageJ macro to browse the images before segmentation
+n_axis1 <- length(unique(cellid.args$t.frame))
+n_axis2 <- length(unique(cellid.args$pos))
+n_axis3 <- length(unique(cellid.args$ch))
+
+# Add 1 to include the BF images as a possible channel
+n_axis3 <- n_axis3 + 1
+
+macro <- glue::glue(
+  '// Macro',
+  'run("Image Sequence...", "open={data.dir} file=(.*\\\\d.tif.out.tif$) sort use");',
+  'run("Stack to Hyperstack...", "order=xyczt(default) channels={n_axis1} slices={n_axis2} frames={n_axis3} display=Grayscale");',
+  .sep = "\n"
+)
+
+cat(macro)
+```
+
+> Note: the dimensions names may be mismatched between R and the macro. This is because 
+virtual stacks must be in `xyczt` order (time is likely to end up as the "channels" dimension), 
+but the order in which the "Image Sequence..." is loaded depends on how their files are named.
+
+The only restriction of this approach is that only "3" dimensions are available for
+browsing: `frame`, `plane`, and `channel`. This is relevant if you wish to browse
+segmentation results (which adds another dimension to the set: original vs "out").
+A fourth dimension would be needed, but Hyperstacks only provide 3. Alternatively, 
+open another virtual hyperstack for the output images, and browse them in-sync.
+
 
 ### Output data
 
