--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -330,6 +330,8 @@ First point R to the folder containing the images. This notebook obeys the path
 specified in the `data.dir` variable. Make sure to assign its value once, or 
 double-check before overwriting it.
 
+### Use yours
+
 If you already have an appropriate dataset, specify the path to the images like this:
 
 > Note: the aprropriate pattern for file names is described at the [Image file names]
@@ -343,7 +345,9 @@ data.dir <- "/path/to/your/data"
 data.dir <- dirname(file.choose())
 ```
 
-Otherwise, install and use the "examples" package.
+### Use the examples
+
+Otherwise, install and use the "examples" package, which provides example images and scripts.
 
 First, get the example data:
 
@@ -435,6 +439,8 @@ with `rcell2`'s defaults. See `?rename_mda` for extra options.
 The defaults are useful for a three channel experiment, 
 and file names looking like this: `far6_w2LED-BF--YFPcube--cam_s7_t2.TIF`.
 
+#### Preview
+
 A preview of how files will be renamed can be generated:
 
 ```{r}
@@ -476,8 +482,6 @@ images.info.final <-
 images.info.final
 ```
 
-To run the function on all images, provide the path to the images directory.
-
 A _dummy_ example follows:
 
 ```{r}
@@ -499,6 +503,15 @@ List all files in the images directory to inspect the result:
 dir(images.path, recursive = T)
 ```
 
+#### Rename all
+
+To run the function on all images, provide the path to the images directory.
+
+```{r}
+result <- rename_mda(images.path = data.dir)
+```
+
+
 The defaults are easily adaptable to other use cases. 
 To use the function with different file name patterns, adjust `identifier.pattern`,
 `identifier.info`, and `channel.maping.df`. See `?rename_mda` for details.
@@ -512,10 +525,10 @@ To use the function with different file name patterns, adjust `identifier.patter
 The following sections may help improve the result of the segmentation,
 to catch severe issues early on.
 
-### Check that yor images are there
+### Check that your images are there
 
-The arguments function will run several tests (using `arguments_check` internally)
-before returning the list of images for cell-ID.
+The `arguments` function will run several tests (using `arguments_check` internally)
+before returning the list of images for Cell-ID.
 
 Warnings (or errors if desired) will be generated if the checks fail.
 
@@ -526,6 +539,15 @@ You can also set `check_fail = FALSE` to inspect all warnings without raising an
 image_list <- rcell2.cellid::arguments(paste0(data.dir, "/renamed"), 
                                        check_fail = TRUE,
                                        file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)_time(\\d+).tif$")
+```
+
+> Note: the usage of the "file.pattern" argument is explained at the
+> [Arguments] section of this notebook.
+
+Inspect the image list:
+
+```{r}
+View(image_list)
 ```
 
 ### Check XY stage coordinates
@@ -544,227 +566,36 @@ if(!requireNamespace("XML")) install.packages("XML")
 <!-- Internal note: The xml2 package does not convert the attributes automatically, 
 so I stuck to the XML package. See tiff_plane_info's help and source for details. -->
 
-#### List your images
-
-Get paths to the images:
-
-```{r}
-# Choose your own path!
-metamorph_pics_dir <- "/path/to/your/data"
-
-# Or use the example images (requires "rcell2.examples", see first example above).
-metamorph_pics_dir <- system.file("extdata/sample_datasets/sample_images/",
-                                  package = "rcell2.examples")
-
-# List some files
-dir(metamorph_pics_dir)
-```
-
-Make the paths to the images:
-
-```{r}
-# Path to a sample image
-image_list <- rcell2.cellid::arguments(metamorph_pics_dir, 
-                                       file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)().tif$")
-metamorph_pics <- paste0(image_list$path, "/", image_list$image)
-```
-
-> Note: the usage of the "file.pattern" argument is explained below, at the
-> [Arguments] section of this notebook.
-
-#### Load TIFF metadata
-
-##### Example image
-
-Get the path to an example image:
-
-```{r}
-metamorph_pic <- metamorph_pics[2]
-```
-
-List plane info for the image:
-
-```{r}
-# Get the image plane metadata
-pic_plane_info <- rcell2.cellid::tiff_plane_info(path = metamorph_pic)
-
-pic_plane_info
-```
-
-> If the required metadata is not found in the TIFF, a warning will be emitted.
-> This can happen if the original images were modified or exported from ImageJ or 
-> other sofware. Continue if there are no warnings, or else skip this section.
-
-Show the stage-position properties:
-
-```{r}
-subset(pic_plane_info, grepl("stage-position", id))
-```
-
-> Our motorized stage works in negative coordinate space, as most CNC machines do.
-> Take this into account when plotting.
-
-##### All images
-
-Get the metadata of all images:
-
-```{r}
-plane_info_df <- setNames(metamorph_pics, basename(metamorph_pics)) %>% 
-  # Get metadata
-  lapply(rcell2.cellid::tiff_plane_info) %>% 
-  bind_rows(.id="image") %>% 
-  # Fix variable names and types
-  mutate(variable = make.names(id)) %>% 
-  filter(grepl("stage.position", variable)) %>% 
-  mutate(value = as.numeric(value)) %>% 
-  # Make it wider
-  pivot_wider(id_cols = "image", names_from = "variable", values_from = "value")
-
-plane_info_df
-```
-
-#### Plot stage positions
-
-```{r}
-ggplot(plane_info_df) +
-  geom_point(aes(stage.position.x, stage.position.y))
-```
-
-> This plot is specially useful when tracing a path for positions in a many-well time-course experiment.
-
 #### Plot position overlaps
 
 The following code match the images' _position_ (Pos) to their microscope stage _physical_ XY coordinates,
 which are stored in the TIFF tags of the original images.
 
+This plot is specially useful when tracing a path for positions in a multi-well time-course experiment.
+
 It requires the `images` dataframe in `cell.data` to get the file names,
 _but_ you could also use `dir` to get the files by pattern, and `sub` to get the position IDs,
 independently of Cell-ID.
 
-```{r}
-images <- rcell2.cellid::arguments_to_images(arguments = image_list)
-```
-
-Set details from your microscope: magnification and physical size of the camera's pixels.
+Optionally set details from your microscope (e.g. magnification and physical size of the camera's pixels).
 
 ```{r}
-# Microscope details.
-magnification <- 40 # 40x
-ccd_pixel_size_microns <- 6.45 # 6.45 um
-```
+result <- plot_pos_overlaps(image_list)
 
-Add image metadata and replot the stage's "path":
-
-```{r}
-# Calculate "Field Of View" size.
-fov_size_microns_x <- 1376 * ccd_pixel_size_microns / magnification  # um in the "X/width" direction
-fov_size_microns_y <- 1040 * ccd_pixel_size_microns / magnification  # um in the "Y/height" direction
-
-# Plot fields of view to check for overlaps visually.
-plt <- plane_info_df %>% 
-  left_join(select(images, image, pos, t.frame, channel)) %>% # filter(channel == "TFP") |> 
-  arrange(pos) %>% 
-  ggplot(aes(stage.position.x, stage.position.y, label = pos)) +
-  geom_path(aes(group = t.frame)) +
-  geom_rect(aes(xmin=stage.position.x-fov_size_microns_x/2, 
-                xmax=stage.position.x+fov_size_microns_x/2, 
-                ymin=stage.position.y-fov_size_microns_y/2, 
-                ymax=stage.position.y+fov_size_microns_y/2,
-                group = pos, fill = factor(pos)), alpha =.5)+
-  geom_text(size=10) +
-  facet_wrap(t.frame~channel) + guides(fill = "none") +
-  scale_x_reverse() + # coord_fixed() +
-  ggtitle("Physical stage coordinates v.s. Position index",
-          "Compare the index numbers with the expected physical distrubution in the well plate.\nThe shaded areas around index numbers shuould not overlap with each other.")
-
-plt
+result$plt
 ```
 
 > If any two shaded areas overlap, there will be duplicated cells in the dataset.
 
 We do not yet offer a way to remove them automatically. You may do this yourself
 by finding the XY coordinates of the first cells not shared between images, and using
-their coordinates to remove the overlaping set from one position.
+their coordinates to remove the overlapping set from one position.
 
 ### Apply FFT filter on BF images
 
-Optionally, use ImageJ's bandpass FFT filter on the defocused brightfield images.
+Optionally, use ImageJ's band-pass FFT filter on the defocused bright field images.
 
 This can help Cell-ID find cells and reduce background artifacts.
-
-There are two ways to apply the filter:
-
-- **Parallel** run: paralellized execution, which is faster and uses more resources (recommended).
-- **Sequential** run: one image is processed at a time, which can be slow on large data sets.
-
-#### Sequential
-
-Here is a wrapper that does most of this for you, calling ImageJ headlessly, on all images.
-
-Get the path to the original BF images:
-
-```{r eval=F}
-# Choose your own path!
-data.dir <- "/path/to/your/data"
-
-# Or use the example images (requires "rcell2.examples", see first example above).
-data.dir <- system.file("extdata/sample_datasets/sample_time_series/",
-                        package = "rcell2.examples")
-
-# List files
-dir(data.dir)
-```
-
-List the BF images from the `arguments` function, and symlink them to a separate directory:
-
-```{r eval=F}
-# Get image paths
-cellid.args <- 
-  rcell2.cellid::arguments(path = data.dir,
-                           file.pattern = "^(BF|[TRY]FP)_Position(\\d+)_time(\\d+).tif$")
-
-# Save BF files
-bf.files <- cellid.args %>%
-  select(bf, path) %>% with(paste0(path,"/",bf)) %>% unique()
-
-# Make a directory to put them in
-fft.bfs.subdirectory <- "bf_subset"
-fft.bfs.dir <- paste0(data.dir, "/", fft.bfs.subdirectory)
-dir.create(fft.bfs.dir)
-
-# Link them over
-result <- file.symlink(from = normalizePath(bf.files),
-                       to = paste0(dirname(bf.files[1]), "/", fft.bfs.subdirectory, "/", basename(bf.files)))
-# Check that it worked.
-stopifnot(all(result))
-```
-
-Run FFT filter on all images sequentially:
-
-```{r eval=F}
-# This may take a while...
-imagej_fft_filter(pic.path = fft.bfs.dir)
-```
-
-Symlink the rest of the images (fluorescence imgs) to the filtered directory:
-
-```{r eval=F}
-# Get all files
-all.files <- cellid.args %>% 
-  with(paste0(path[1],"/", c(bf, image))) %>% unique()
-# And the difference with the BF vector
-the.rest <- setdiff(all.files, bf.files)
-# Symlink over to the directory of the FFT-filtered BFs
-if(length(all.files) == length(bf.files) + length(the.rest)){
-  file.symlink(from = normalizePath(the.rest),
-               to = paste0(dirname(the.rest[1]), "/", fft.bfs.subdirectory, "/filtered/", basename(the.rest)))
-}
-```
-
-
-#### Parallel
-
-This is the parallel version of the FFT filter script.
 
 List the BF images from the `arguments` function:
 
@@ -778,13 +609,14 @@ cellid.args <-
 Split the BF files by position, and symlink them to different subdirectories:
 
 ```{r eval=F}
-cellid.args.split <- split(cellid.args, ~pos)
-
-fft.bfs.subdirs <- list()
-
 # Prefix or full path to where filtered images will be stored.
 fft.subdirs.prefix <- "bf_subset"
 
+# Prepare variables
+fft.bfs.subdirs <- list()
+
+# Iterate over positions
+cellid.args.split <- split(cellid.args, ~pos)
 for(i in seq_along(cellid.args.split)) {
   # Save BF files
   bf.files <- cellid.args.split[[i]] %>%
@@ -802,28 +634,33 @@ for(i in seq_along(cellid.args.split)) {
   fft.bfs.subdirs[i] <- fft.bfs.dir
 }
 
+# Inspect the result
 fft.bfs.subdirs
 ```
 
 Run FFT filter in parallel, with one thread per subdirectory:
 
 ```{r eval=F}
-n_cores <- parallel::detectCores() #- 1
-n_chunks <- length(fft.bfs.subdirs)
+library(foreach)
+library(doParallel)
 
 # Make cluster
+n_cores <- parallel::detectCores()
+n_chunks <- length(fft.bfs.subdirs)
 cl <- parallel::makeCluster(
   spec = min(n_chunks,n_cores), 
   setup_strategy = "sequential"  #https://github.com/rstudio/rstudio/issues/6692
 )
 
-# This may take a while...
-library(foreach)
+# Iterate (this can take a while...)
 doParallel::registerDoParallel(cl)
-foreach(fft.bfs.subdir=fft.bfs.subdirs, .packages = "rcell2.cellid") %dopar% {
+
+foreach(fft.bfs.subdir=fft.bfs.subdirs, 
+        .packages="rcell2.cellid") %dopar% {
   imagej_fft_filter(pic.path = fft.bfs.subdir, 
                     imagej.path="~/Software/FIJI/Fiji.app/ImageJ-linux64")
-}
+        }
+
 parallel::stopCluster(cl)
 ```
 
@@ -839,11 +676,11 @@ dir.create(filtered.bfs.dir)
 # Symlink BF images to the final location.
 result <- file.symlink(from = normalizePath(filtered.bfs), 
                        to = paste0(filtered.bfs.dir, basename(filtered.bfs)))
-
-all(result)  # Check
+# Check
+all(result)
 ```
 
-Symlink the rest of the images (fluorescence imgs) to the filtered directory:
+Symlink the rest of the images (i.e. fluorescence images) to the "filtered" directory:
 
 ```{r eval=F}
 # Get all FL files (no BF files).
@@ -853,13 +690,13 @@ fl.files <- cellid.args %>%
 # Symlink over to the directory of the FFT-filtered BFs
 result <- file.symlink(from = normalizePath(fl.files),
                        to = paste0(filtered.bfs.dir, basename(fl.files)))
-
-all(result)  # Check
+# Check
+all(result)
 ```
 
 > Done!
 
-You can run CellID using this directory as the `data.dir`:
+You can run Cell-ID using the following directory as the new `data.dir`:
 
 ```{r eval=F}
 data.dir <- normalizePath(filtered.bfs.dir)
